# picer

./: .gitignore  PLAN-client-server.md  PLAN-devices.md  PLAN.md  README.md  pyproject.toml
src/picer/: __main__.py
src/picer/api/: __init__.py  app.py  auth.py  captures.py  events.py  preview.py  session.py  state.py
src/picer/api/routes/: camera.py  capture.py  files.py  gear.py  objects.py  sequence.py
src/picer/camera/: base.py  gphoto2_backend.py  mock_backend.py  models.py
src/picer/cli/: commands.py
src/picer/core/: api_client.py  bulb.py  controller.py  sequence.py
src/picer/gear/: catalog.py  models.py  store.py
src/picer/gui/: app.py  main_window.py
src/picer/gui/dialogs/: add_gear_dialog.py  download_dialog.py
src/picer/gui/panels/: exposure_panel.py  format_panel.py  gear_panel.py  iso_panel.py  object_panel.py  output_panel.py  preview_panel.py  psf_window.py  sequence_panel.py
src/picer/objects/: catalog.py  models.py  store.py
src/picer/objects/data/: barnard.csv  lynds.csv  pgc.csv
src/picer/utils/: file_naming.py  fits_converter.py  gvfs_inhibit.py  psf.py
tests/: conftest.py  test_bulb.py  test_cli.py  test_file_naming.py  test_sequence.py
udev/: 99-picer-camera.rules
